@@ -7,6 +7,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import ua.foxminded.pskn.universitycms.converter.professor.ProfessorConverter;
+import ua.foxminded.pskn.universitycms.customexception.ProfessorNotFoundException;
 import ua.foxminded.pskn.universitycms.dto.ProfessorDTO;
 import ua.foxminded.pskn.universitycms.model.user.Professor;
 import ua.foxminded.pskn.universitycms.repository.user.ProfessorRepository;
@@ -23,9 +24,16 @@ public class ProfessorService {
 
     private final ProfessorConverter professorConverter;
 
-    public Optional<Professor> getProfessorByUserId(Long userId) {
+    public ProfessorDTO getProfessorByUserId(Long userId) {
+        if (userId == null || userId <= 0) {
+            throw new IllegalArgumentException("Wrong value of 'userId'");
+        }
+
         log.debug("Getting professor by user ID: {}", userId);
-        return professorRepository.getProfessorByUserId(userId);
+
+        return (professorRepository.getProfessorByUserId(userId)
+            .map(professorConverter::convertToDTO)
+            .orElseThrow(() -> new ProfessorNotFoundException("Professor not found.")));
     }
 
     public List<ProfessorDTO> getAllProfessors() {
@@ -34,7 +42,7 @@ public class ProfessorService {
         return professorRepository.findAll()
             .stream()
             .map(professorConverter::convertToDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public Page<ProfessorDTO> getAllProfessors(Pageable pageable) {
@@ -42,4 +50,6 @@ public class ProfessorService {
         Page<Professor> professorPage = professorRepository.findAll(pageable);
         return professorPage.map(professorConverter::convertToDTO);
     }
+
+
 }
